# trfs

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/java/org/libsdl/app/com/timewalk/breakout/: GameActivity.java
assets/shaders/: shaders.json  standard.fs  standard.vs  textured.fs  textured.vs  textured_transform.vs
assets/textures/: textures.json
breakout/: CMakeLists.txt
breakout/src/: BreakoutGameDeletage.cpp  BreakoutGameDeletage.h  game.cpp
cmake/: project_version.cmake
sandbox/: CMakeLists.txt
sandbox/src/: ExampleLayersFactory.cpp  ExampleLayersFactory.h  GameLayer.cpp  GameLayer.h  SandboxDelegate.cpp  SandboxDelegate.h  sandbox.cpp
sandbox/src/examples/: Empty.cpp  Empty.h  Polygon.cpp  Polygon.h  SimpleScene.cpp  SimpleScene.h  TexturedPolygon.cpp  TexturedPolygon.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h
trfs/: CMakeLists.txt
trfs/cmake/: trfs_version.cmake
trfs/src/: Precompiled.h  Version.h.in
trfs/src/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  GameDelegate.cpp  GameDelegate.h  ImguiBackend.cpp  ImguiLayer.cpp  ImguiLayer.h  Input.cpp  Input.h  Keycodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Main.cpp  Main.h  Subsystems.cpp  Subsystems.h  TimeManager.cpp  TimeManager.h
trfs/src/Core/Event/: Event.h  KeyEvent.h  MouseEvent.h
trfs/src/Debug/: Assert.h  OpenGLDebug.cpp  OpenGLDebug.h
trfs/src/IO/: FileBuffer.cpp  FileBuffer.h  FileReader.cpp  FileReader.h
trfs/src/Math/: MathTypes.h  Transform.h
trfs/src/Render/: Camera.cpp  Camera.h  DepthTestGuard.cpp  DepthTestGuard.h  OpenGLConfig.h  RenderFunc.cpp  RenderFunc.h  RenderUtils.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Types.cpp  Types.h
trfs/src/Utils/: File.cpp  File.h
trfs/tests/: CMakeLists.txt
trfs/tests/src/: TestFileBuffer.cpp  TestFileReader.cpp  TestLayerStack.cpp  TestMain.cpp
